# cs455-raytracer

./: .gitignore  CMakeLists.txt  README.md  box.hpp  camera.hpp  color.cpp  color.hpp  dielectric.hpp  emission.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  lambertian.hpp  light.hpp  main.cpp  makefile  material.hpp  metal.hpp  phong_material.hpp  point3d.cpp  point3d.hpp  quadrilateral.hpp  ray.hpp  scenes.hpp  sphere.hpp  triangle.hpp  triplet.cpp  triplet.hpp  unit_tests.cpp  utilities.hpp  vector.hpp
raytracer/: raytracer  scene1.ppm  scene2.ppm  scene3.ppm  scene_1.ppm  scene_2.ppm  scene_3.ppm
scripts/: createAnimation.py
